--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -7,8 +7,18 @@
     <title>Methods for Adding CSS</title>
   </head>
   <body>
+    <style>
+      p{
+        /*a green background, white text, and a font size of 18px*/
+        background-color: green;
+        color: white;
+        font-size: 18px;
+      }
+    </style>
+    <link rel="stylesheet" href="styles.css">
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <!--an orange background and a font size of 18px-->
+    <button style="background-color: orange; font-size: 18px;" >Inline Method</button>
   </body>
 </html>
